# pseudo-3D-interpolation

./: .gitignore  404.html  LICENSE_SeismicUnix  README.md  environment.yml  environment_dev.yml  environment_optional.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_optional.txt  setup.cfg  sitemap.xml
2D/2D_despike/: index.html
2D/convert_segy2netcdf/: index.html
2D/coordinate_conversion/: index.html
2D/correct_delrt/: index.html
2D/merge_segys/: index.html
2D/mistie_correction/: index.html
2D/pad_vertical_offsets/: index.html
2D/static_correction/: index.html
2D/tide_compensation/: index.html
3D/3D_cube_interpolation/: index.html
3D/apply_FFT_3D/: index.html
3D/apply_inverse_FFT_3D/: index.html
3D/convert_netcdf2segy_3D/: index.html
3D/cube_binning_geometry/: index.html
3D/postprocessing_3D/: index.html
3D/preprocessing_3D/: index.html
api/api_cnv_segy2netcdf/: index.html
api/api_cube_POCS_interpolation_3D/: index.html
api/api_cube_apply_FFT/: index.html
api/api_cube_apply_IFFT/: index.html
api/api_cube_binning_3D/: index.html
api/api_cube_cnv_netcdf2segy_3D/: index.html
api/api_cube_postprocessing_3D/: index.html
api/api_cube_preprocessing_3D/: index.html
api/api_delrt_correction_segy/: index.html
api/api_delrt_padding_segy/: index.html
api/api_despiking_2D_segy/: index.html
api/api_merge_segys/: index.html
api/api_mistie_correction_segy/: index.html
api/api_reproject_segy/: index.html
api/api_static_correction_segy/: index.html
api/api_tide_compensation_segy/: index.html
citation/: index.html
citation_review/: index.html
contact/: index.html
contact_review/: index.html
docs/: citation.md  citation_review.md  contact.md  contact_review.md  index.md  index_backup.md  license.md  results.md  workflow.md
docs/2D/: 2D_despike.md  convert_segy2netcdf.md  coordinate_conversion.md  correct_delrt.md  merge_segys.md  mistie_correction.md  pad_vertical_offsets.md  static_correction.md  tide_compensation.md
docs/3D/: 3D_cube_interpolation.md  apply_FFT_3D.md  apply_inverse_FFT_3D.md  convert_netcdf2segy_3D.md  cube_binning_geometry.md  postprocessing_3D.md  preprocessing_3D.md
docs/api/: api_cnv_segy2netcdf.md  api_cube_POCS_interpolation_3D.md  api_cube_apply_FFT.md  api_cube_apply_IFFT.md  api_cube_binning_3D.md  api_cube_cnv_netcdf2segy_3D.md  api_cube_postprocessing_3D.md  api_cube_preprocessing_3D.md  api_delrt_correction_segy.md  api_delrt_padding_segy.md  api_despiking_2D_segy.md  (+5 more)
index_backup/: index.html
javascripts/: mathjax.js
license/: index.html
pseudo_3D_interpolation/: cnv_segy2netcdf.py  cube_POCS_interpolation_3D.py  cube_apply_FFT.py  cube_apply_IFFT.py  cube_binning_3D.py  cube_cnv_netcdf2segy_3D.py  cube_postprocessing_3D.py  cube_preprocessing_3D.py  delrt_correction_segy.py  delrt_padding_segy.py  despiking_2D_segy.py  merge_segys.py  mistie_correction_segy.py  reproject_segy.py  static_correction_segy.py  tide_compensation_segy.py
results/: index.html
search/: search_index.json
workflow/: index.html
(+31 files in other folders)
