[metadata]
author = Fynn Warnke
author_email = fwar378@aucklanduni.ac.nz
name = pseudo-3D-interpolation
version = attr: pseudo_3D_interpolation.__version__
description = Open-source workflow to generate pseudo-3D cube from 2D profiles using POCS interpolation.
keywords = SBP, seismic, interpolation, xarray, segyio
long_description = file: README.md
license = GNU GPLv3
license_files = LICENSE
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
url = https://fwrnke.github.io/pseudo-3D-interpolation/

[options]
packages = find:
python_requires = >=3.9
install_requires =
    bottleneck
    dask[complete]
    distributed
    h5netcdf
    matplotlib
    numpy>=1.20.0
    pandas
    pip
    pyproj
    scipy>=1.8
    segyio
    segysak
    shapely>=2.0
    tqdm
    xarray[complete]
    xrft @ git+https://github.com/fwrnke/xrft.git

[options.extras_require]
tide =
    tpxo-tide-prediction @ git+https://github.com/fwrnke/tpxo-tide-prediction.git
transforms = 
    pylops>=2.0
    pywavelets
    pyshearlets @ git+https://github.com/fwrnke/PyShearlets.git
extra =
    geopandas
    numba    
docs = 
    mkdocs
    mkdocs-autorefs
    mkdocs-material
    mkdocs-material-extensions
    mkdocs-git-revision-date-localized-plugin
    mkdocstrings
    mkdocstrings-python
    pydocstringformatter
plot = 
    pyvista
    rioxarray
dev = 
    %(tide)s
    %(transforms)s
    %(extra)s
    %(docs)s
    %(plot)s
    black
    flake8
    spyder-kernels==2.4
    
[options.packages.find]
exclude =
    docs*

[options.entry_points]
console_scripts =
    01_merge_segys = pseudo_3D_interpolation.merge_segys:main
    02_reproject_segy = pseudo_3D_interpolation.reproject_segy:main
    03_correct_delrt = pseudo_3D_interpolation.delrt_correction_segy:main
    04_pad_delrt = pseudo_3D_interpolation.delrt_padding_segy:main
    05_correct_static = pseudo_3D_interpolation.static_correction_segy:main
    06_compensate_tide = pseudo_3D_interpolation.tide_compensation_segy:main
    07_correct_mistie = pseudo_3D_interpolation.mistie_correction_segy:main
    08_despike = pseudo_3D_interpolation.despiking_2D_segy:main
    09_convert_segy2netcdf = pseudo_3D_interpolation.cnv_segy2netcdf:main
    10_cube_geometry_binning = pseudo_3D_interpolation.cube_binning_3D:main
    11_cube_preprocessing = pseudo_3D_interpolation.cube_preprocessing_3D:main
    12_cube_apply_FFT = pseudo_3D_interpolation.cube_apply_FFT:main
    13_cube_interpolate_POCS = pseudo_3D_interpolation.cube_POCS_interpolation_3D:main
    14_cube_apply_IFFT = pseudo_3D_interpolation.cube_apply_IFFT:main
    15_cube_postprocessing = pseudo_3D_interpolation.cube_postprocessing_3D:main
    16_cube_cnv_netcdf2segy = pseudo_3D_interpolation.cube_cnv_netcdf2segy_3D:main
    